fix Android build and rendering

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -19,7 +19,7 @@
 	</style>
 </head>
 <body>
-	<canvas id="{canvas_id}" width="{canvas_width}" height="{canvas_height}"></canvas>
+	<canvas id="{canvas_id}" width="{canvas_width}" height="{canvas_height}" tabindex="0"></canvas>
 	<script src="{script_name}.js"></script>
 </body>
 </html>
