--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -9,7 +9,7 @@
 		canvas {
 			position: absolute;
 			left: 50%;
-			margin-left: -{canvas_half_width}px;
+			margin-left: -{canvasHalfWidth}px;
 			border: none;
 			outline: none;
 		}
@@ -19,7 +19,7 @@
 	</style>
 </head>
 <body>
-	<canvas id="{canvas_id}" width="{canvas_width}" height="{canvas_height}" tabindex="0"></canvas>
-	<script src="{script_name}.js"></script>
+	<canvas id="{canvasID}" width="{canvasWidth}" height="{canvasHeight}" tabindex="0"></canvas>
+	<script src="{scriptName}.js"></script>
 </body>
 </html>
